styles/globals.css
@font-face {
    font-family: HNR;
    src: url(../fonts/helveticaneue.ttf);
}

body {
    margin: 0;
    padding: 0;
    background-color: #F1F1EF;
    color: #0D0D0E;
    font-family: HNR;
    transition: color 0.2s ease-in-out;
    transition: background-color 0.2s ease-in-out;
    overscroll-behavior: none;
}

.printButton {
    cursor: pointer;
}

.aboutButton {
    cursor: pointer;
}

.pageContent{
    padding-top: 45px;
}

.logoContainer {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    pointer-events: none;
    width: 50%;
}

.logo {
    height: fit-content; 
}

.slideshow {
    margin-top: 200px;
}

.logoDarkMode {
    display: none;
}

.logoMask {
    position: absolute;
    background-color: #F1F1EF;
    height: 100%;
    width: 100%;
}

.carouselContainer {
    margin-top: 40px;
    height: 90vh;
    display: flex; 
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
    padding-left: 10px;
    padding-right: 10px;
}

.carouselContainer img {
    display: inline-block;
    opacity: 0;
    width: 700px;
    padding: 40px;
} 

/* Float */
.hvr-float {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
  -webkit-transform: translateY(-8px);
  transform: translateY(-8px);
}

.carouselContainer .imageWrapper:nth-child(even) {
    z-index: 0;
    padding-right: 100px;
    padding-top: 250px;
    /* pointer-events: none; */
}

.carouselContainer .imageWrapper:nth-child(odd) {
    z-index: 0;
    padding-right: 100px;
    padding-bottom: 150px;
    /* pointer-events: none; */
}

.carouselContainer .imageWrapper:nth-child(15){
    margin-top: 300px;
}

.carouselContainer .imageWrapper:nth-child(22){
    margin-left: 400px;
}

/* Disable scrolling on Safari */
@media not all and (min-resolution:.001dpcm) { @supports (-webkit-appearance:none) {
    body {
        overflow-x: hidden;
    }
}}

/* Random breakpoints to fix logo resizing on some of the smaller desktop screens */
@media (max-width: 550px) and (max-height: 850px){
    .logoContainer{
        width: 70%;
    }
}

@media (min-width: 501px) and (max-width: 900px){
    .logoContainer{
        width: 70%;
    }
}

@media (max-height: 360px){
    .logoContainer{
        width: 40%;
    }
}

/* Smallest screens possible */
@media (min-width: 200px) and (max-width: 299px) and (min-height: 500px) and (max-height: 653px){
    .logoContainer{
        width: 90%;
    }

    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

/* Samsung Galaxy S8+ */
@media (min-width: 300px) and (max-width: 360px) and (min-height: 654px) and (max-height: 799px){
    .logoContainer{
        width: 90%;
    }

    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

/* Samsung Phone S20 Ultra */
@media (min-width: 361px) and (max-width: 412px) and (min-height: 800px) and (max-height: 915px){
    .logoContainer{
        width: 90%;
    }
    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

/* Smaller iPhone screens */
@media (min-width: 380px) and (max-width: 393px) and (min-height: 700px) and (max-height: 851px){
    .logoContainer{
        width: 90%;
    }

    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

/* pre-iPhone 12 */
@media (min-width: 300px) and (max-width: 435px) and (min-height: 500px) and (max-height: 950px){
    .logoContainer{
        width: 90%;
    }
    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

/* iPhone 12 */
@media (min-width: 376px) and (max-width: 390px) and (min-height: 668px) and (max-height: 895px){

    .logoContainer{
        width: 90%;
    }
    
    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
    
}

/* iPhone XR */
@media (min-width: 391px) and (max-width:500px) and (min-height: 852px) and (max-height: 900px ){
    .logoContainer{
        width: 90%;
    }

    .carouselContainer img{
        width: 400px;
        padding: 10px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 70px;
        margin-left: -70px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 100px;
    }

    .carouselContainer .imageWrapper:nth-child(24){
        padding-top: 100px;
    }

    .sl-close{
        text-indent: -9999px;
        line-height: 0;
        pointer-events: none !important;
    }

    .sl-close::after{
        content: 'Swipe down to close';
        font-size: 16px;
        text-indent: 0;
        display: block;
        line-height: initial;
        pointer-events:  none !important;
    }
}

